--- a/qa/index.html
+++ b/qa/index.html
@@ -3,9 +3,9 @@
     <head>
     </head>
     <body>
-        <h1>My First Page</h1>
-        <p>This is my first page.</p>
+        <h1>Roy傳訊</h1>
+        <p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRu1zeu3FbV3Oo8r8CbI7YYVBBXLjoQGB4NN3xqbpW1NWCFUA-J-MURP1Q6NKJzlVOYZBjW7Andttez/pubhtml?gid=968978100&single=true">查看訊息</a>a</p>
         <hr>
-        <p>This is the footer - all rights are reserved to me.</p>
+        <p><a href="https://docs.google.com/forms/d/1raqb9bN9Es5-azW8dPMIJ2iMRYw6Dg6MZn5KSkYUB0A/prefill">留言</a>a</p>
     </body>
 </html>
