--- a/qa/index.html
+++ b/qa/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Roy傳訊</h1>
         <br><br>
-        <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRu1zeu3FbV3Oo8r8CbI7YYVBBXLjoQGB4NN3xqbpW1NWCFUA-J-MURP1Q6NKJzlVOYZBjW7Andttez/pubhtml?gid=968978100&single=true"><font size="6">查看訊息</font></a>
+        <a href="https://reurl.cc/AADe53"><font size="6">查看訊息</font></a>
         <br><br>
         <a href="https://forms.gle/r6Gex8AnzJsPkLz29"><font size="6">留言</font></a>
     </body>
