--- a/qa/form.html
+++ b/qa/form.html
@@ -126,7 +126,7 @@
             $('#message').val('')
             $('#who').val('')
             //最後跳轉到感謝的頁面
-            window.location.replace("../index.html");
+            window.location.replace("index.html");
           }
         });
       }
