--- a/qa/index.html
+++ b/qa/index.html
@@ -7,6 +7,6 @@
         <br><br>
         <a href="https://reurl.cc/AADe53"><font size="6">查看訊息</font></a>
         <br><br>
-        <a href="https://forms.gle/r6Gex8AnzJsPkLz29"><font size="6">留言</font></a>
+        <a href="form3.html"><font size="6">留言</font></a>
     </body>
 </html>
