--- a/qa/form3.html
+++ b/qa/form3.html
@@ -32,8 +32,8 @@
 <body>
 
 
-  <div class="container-contact100">
-    <div class="wrap-contact100">
+  
+    <div class="">
       <form id="google-form" class="contact100-form validate-form">
         <span class="contact100-form-title">
           Roy傳訊<br><br>
@@ -80,7 +80,7 @@
 
       
     </div>
-  </div>
+  
 
 
 
