--- a/qa/form3.html
+++ b/qa/form3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Roy傳訊</title>
+  <title>Roy傳訊</title>  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--===============================================================================================-->
@@ -35,9 +35,9 @@
   
     <div class="">
       <form id="google-form" class="contact100-form validate-form">
-        <span class="contact100-form-title">
+        <a href="index.html"><span class="contact100-form-title">
           Roy傳訊<br><br>
-        </span>
+        </span></a>
 
 
         <label class="label-input100" for="name">給誰 *</label>
@@ -140,9 +140,7 @@
     });
   </script>
   
-  <div class="">
-  <a href="index.html"><span class="contact100-form-title">回主頁</span></a>
-  </div>
+
 </body>
 
 </html>
