--- a/qa/index.html
+++ b/qa/index.html
@@ -5,8 +5,8 @@
     <body>
         <h1>Roy傳訊</h1>
         <br><br>
-        <a href="https://reurl.cc/AADe53"><font size="6">查看訊息</font></a>
+        <a href="https://reurl.cc/AADe53"><font size="200%">查看訊息</font></a>
         <br><br>
-        <a href="form3.html"><font size="6">留言</font></a>
+        <a href="form3.html"><font size="200%">留言</font></a>
     </body>
 </html>
