--- a/qa/index.html
+++ b/qa/index.html
@@ -7,6 +7,8 @@
         <br><br>
         <a href="https://reurl.cc/AADe53"><font size="200%">查看訊息</font></a>
         <br><br>
+        <a href="https://docs.google.com/spreadsheets/d/1nKjFyeNg5RIzsTeBRv5-AAOxJClfMVUPJYcTq9OX9gI/edit?usp=sharing"><font size="200%">查看訊息-測試</font></a>
+        <br><br>
         <a href="form3.html"><font size="200%">留言</font></a>
     </body>
 </html>
